--- a/Makefile.local
+++ b/Makefile.local
@@ -37,6 +37,7 @@ jpeg_version				= v9
 sdl_version					= 1.2.15
 alsa_version 				= 1.0.25
 freetype_version 			= 2.4.11
+libxml2_version 			= git
 fontconfig_version 			= git
 libcddb_version				= 1.3.2
 taglib_version				= 1.8
@@ -117,6 +118,7 @@ openjpeg = openjpeg-$(openjpeg_version)
 speex = speex-$(speex_version)
 expat = expat-$(expat_version)
 gperf = gperf-$(gperf_version)
+libxml2 = libxml2-$(libxml2_version)
 fontconfig = fontconfig-$(fontconfig_version)
 fribidi = fribidi-$(fribidi_version)
 freetype = freetype-$(freetype_version)
@@ -176,7 +178,7 @@ tools: yasm cmake gperf gmp nettle gnutls expat zlib bzip2
 helpers: sdl alsa freetype fontconfig taglib libcddb libdvdcss fribidi rtmpdump libcec
 
 codecs: \
-	libcdio libgsm libmad libass \
+	libcdio libgsm libmad libass libxml2 \
 	libogg libvorbis libtheora libbluray libvpx \
 	libaacplus libcaca libilbc \
 	opus openjpeg fdk-aac xvidcore x264 \
@@ -714,6 +716,27 @@ $(freetype)/dezi.done:
 	touch dezi.done
 
 freetype: $(freetype) $(freetype)/dezi.done
+
+#####################################################################
+#
+# libxml2 => libvpx
+#
+
+$(libxml2): 
+	git clone git://git.gnome.org/libxml2 $(libxml2)
+	tar -cvzf $(libxml2).tar.gz $(libxml2)
+	mv $(libxml2).tar.gz ../download
+
+$(libxml2)/dezi.done:
+	cd $(libxml2); \
+	export PKG_CONFIG_PATH="/usr/local/lib/pkgconfig"; \
+	./autogen.sh; \
+	./configure --enable-shared --enable-static; \
+	make; \
+	sudo make install; \
+	touch dezi.done
+
+libxml2: $(libxml2) $(libxml2)/dezi.done
 
 #####################################################################
 #
