--- a/Makefile.local
+++ b/Makefile.local
@@ -12,6 +12,7 @@
 # sudo apt-get install libio-socket-ssl-perl
 #
 
+celt_version				= git
 libcec_version				= git
 noip_version				= 2.1.9-1
 afpfs-ng_version			= 0.8.2
@@ -54,7 +55,7 @@ libvorbis_version 			= 1.3.3
 libtheora_version 			= 1.1.1
 libbluray_version 			= git
 libvpx_version 				= git
-libaacplus_version 			= 2.0.2
+libaacplus_version 			= git
 libcaca_version 			= git
 libilbc_version 			= git
 
@@ -86,6 +87,7 @@ v8_version 					= git
 
 #####################################################################
 
+celt = celt-$(celt_version)
 libcec = libcec-$(libcec_version)
 noip = noip-$(noip_version)
 afpfs-ng = afpfs-ng-$(afpfs-ng_version)
@@ -178,7 +180,7 @@ tools: yasm cmake gperf gmp nettle gnutls expat zlib bzip2
 helpers: sdl alsa freetype fontconfig taglib libcddb libdvdcss fribidi rtmpdump libcec
 
 codecs: \
-	libcdio libgsm libmad libass libxml2 \
+	celt libcdio libgsm libmad libass libxml2 \
 	libogg libvorbis libtheora libbluray libvpx \
 	libaacplus libcaca libilbc \
 	opus openjpeg fdk-aac xvidcore x264 \
@@ -276,6 +278,26 @@ $(xz)/dezi.done:
 	touch dezi.done
 
 xz: $(xz) $(xz)/dezi.done
+
+##################################################################
+#
+# celt
+#
+
+$(celt):
+	git clone --depth 5 git://git.xiph.org/celt.git $(celt)
+	tar -cvzf $(celt).tar.gz $(celt)
+	mv $(celt).tar.gz ../download
+
+$(celt)/dezi.done: celt-git
+	cd $(celt); \
+	./autogen.sh; \
+	./configure --prefix=/usr/local || exit; \
+	make || exit; \
+	sudo make install; \
+	touch dezi.done
+
+celt: celt-git/dezi.done
 
 ##################################################################
 #
@@ -1048,9 +1070,9 @@ libvpx: $(libvpx) $(libvpx)/dezi.done
 #
 
 $(libaacplus): 
-	wget http://217.20.164.161/~tipok/aacplus/$(libaacplus).tar.gz
-	tar -xzf $(libaacplus).tar.gz 
-	mv -f $(libaacplus).tar.gz ../download
+	git clone --depth 5 https://github.com/Distrotech/libaacplus.git $(libaacplus)
+	tar -cvzf $(libaacplus).tar.gz $(libaacplus)
+	mv $(libaacplus).tar.gz ../download
 
 $(libaacplus)/dezi.done:
 	cd $(libaacplus); \
@@ -1191,7 +1213,7 @@ $(faac):
 	tar -xvzf $(faac).tar.gz 
 	mv -f $(faac).tar.gz ../download
 	cd $(faac); \
-	patch -np1 -i ../faac-$(faac_version)-glibc_fixes-1.patch; \
+	patch -p1 -i ../faac-$(faac_version)-glibc_fixes-1.patch; \
 	cd ..;\
 	mv -f faac-$(faac_version)-glibc_fixes-1.patch ../download
 
