--- a/Makefile.local
+++ b/Makefile.local
@@ -261,10 +261,8 @@ $(libMXF):
 	mv $(libMXF).tgz ../download
 
 $(libMXF)/dezi.done:
-	mkdir -p $(libMXF)/libMXF/lib/include/uuid; \
-	cp $(e2fsprogs)/lib/uuid/uuid.h $(libMXF)/libMXF/lib/include/uuid/uuid.h; \
-	cp ../patches/writeavidmxf-main.c $(libMXF)/libMXF/examples/writeavidmxf/main.c; \
 	cd $(libMXF); \
+	curl 
 	sed -i 's/-Werror//g' libMXF/vars.mk; \
 	sed -i 's/-Werror//g' libMXF++/vars.mk; \
 	make; \
